--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
 
     </div>
 
-    <h1 class="credit"> created and designed by <span> mr. akhil sharma and dev sharma </span> | all rights reserved! </h1>
+    <h1 class="credit"> created and designed by <span> mr. akhil sharma </span> | all rights reserved! </h1>
 
 </section>
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
